--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "\n",
     "\n",
-    "os.chdir('C:\\\\Users\\\\harri\\\\OneDrive\\\\Documents\\\\fake-news-detector')\n",
+    "os.chdir('C:\\\\...\\\\fake-news-detector')\n",
     "# os.listdir()\n",
     "# os.getcwd()\n",
     "df_fake = pd.read_csv('data/raw/Fake.csv')\n",
@@ -485,18 +485,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
   }
  },
  "nbformat": 4,
